added EKS section