@@ -1,13 +1,9 @@
-FROM maven:3.9-eclipse-temurin-17 AS builder
+FROM eclipse-temurin:17-jdk
 
-COPY . /usr/src/easybuggy/
+WORKDIR /app
 
-WORKDIR /usr/src/easybuggy/
+COPY target/asgbuggy.jar /app/asgbuggy.jar
 
-RUN mvn -B clean package
+RUN mkdir -p /app/logs
 
-FROM eclipse-temurin:17-jre
-
-COPY --from=builder /usr/src/easybuggy/target/easybuggy.jar /easybuggy.jar
-
-CMD ["java", "-XX:MaxMetaspaceSize=128m", "-Xloggc:logs/gc_%p_%t.log", "-Xmx256m", "-XX:MaxDirectMemorySize=90m", "-XX:+UseSerialGC", "-XX:+PrintHeapAtGC", "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", "-XX:+UseGCLogFileRotation", "-XX:NumberOfGCLogFiles=5", "-XX:GCLogFileSize=10M", "-XX:GCTimeLimit=15", "-XX:GCHeapFreeLimit=50", "-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=logs/", "-XX:ErrorFile=logs/hs_err_pid%p.log", "-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n", "-Dderby.stream.error.file=logs/derby.log", "-Dderby.infolog.append=true", "-Dderby.language.logStatementText=true", "-Dderby.locks.deadlockTrace=true", "-Dderby.locks.monitor=true", "-Dderby.storage.rowLocking=true", "-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.port=7900", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-ea", "-jar", "/easybuggy.jar"]
+ENTRYPOINT ["java", "-Xlog:gc*:file=/app/logs/gc.log", "-jar", "/app/asgbuggy.jar"]
